<resources>
  <string name="app_name">LSF Paralegal Guide</string>
  <string name="title">Mwongozo wa Wawezeshaji wa Wasaidizi wa Kisheria</string>
  <string name="navigation_drawer_open">Fungua droo</string>
  <string name="navigation_drawer_close">Funga droo</string>
  <string name="action_about">Yahusu</string>
  <string name="action_abbreviations">Finyazo/Vifupisho</string>
  <string name="action_preface">Dibaji</string>
  <string name="action_acknowledgements">Shukrani</string>
  <string name="action_introduction">Utangulizi</string>
  <string name="action_search">Pekua</string>
  <string name="action_search_hint">Pekua mwongozo</string>
  <string name="action_bibliography">Rejea</string>
</resources>
