<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group
      android:id="@+id/activity_main_drawer_book_front_matter"
      android:checkableBehavior="single">
    <item
        android:id="@+id/nav_abbreviations"
        android:icon="@drawable/ic_menu_abbreviations"
        android:title="@string/action_abbreviations"/>
    <item
        android:id="@+id/nav_preface"
        android:icon="@drawable/ic_menu_preface"
        android:title="@string/action_preface"/>
    <item
        android:id="@+id/nav_acknowledgements"
        android:icon="@drawable/ic_menu_acknowledgements"
        android:title="@string/action_acknowledgements"/>
    <item
        android:id="@+id/nav_introduction"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/action_introduction"/>
  </group>

  <group
      android:id="@+id/activity_main_drawer_book_back_matter"
      android:checkableBehavior="single">
    <item
        android:id="@+id/nav_bibliography"
        android:icon="@drawable/ic_menu_bibliography"
        android:title="@string/action_bibliography"/>
  </group>
</menu>
